objects/SBQQ__Quote__c/fields/AcceptanceLanguage__c.field-meta.xml
<CustomField>
    <fullName>AcceptanceLanguage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Acceptance Language</label>
    <type>Checkbox</type>
</CustomField>