objects/SBQQ__Quote__c/fields/Account_Record_Type_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_Record_Type_ID__c</fullName>
    <formula>SBQQ__Account__r.RecordTypeId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Record Type ID</label>
    <type>Text</type>
</CustomField>