objects/SBQQ__Quote__c/fields/Account_Segment__c.field-meta.xml
<CustomField>
    <fullName>Account_Segment__c</fullName>
    <description>INC0143016
Only visible to Admins for troubleshooting. Field used in Approval Process Quote: New P&amp;P Quote Approval 3</description>
    <formula>IF( 
 AND( Business_Motion_Oppty__c = &apos;MSP&apos;, 
  NOT(ISBLANK(End_User_Account__c))
    ),TEXT( End_User_Account__r.Segment__c ),  
TEXT(SBQQ__Account__r.Segment__c)
  )

/*TEXT(SBQQ__Account__r.Segment__c)*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Segment</label>
    <type>Text</type>
</CustomField>