objects/SBQQ__Quote__c/fields/Account_Support_Model__c.field-meta.xml
<CustomField>
    <fullName>Account_Support_Model__c</fullName>
    <description>Support Model from the related Account</description>
    <formula>TEXT(SBQQ__Account__r.Support_Model__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Support Model</label>
    <type>Text</type>
</CustomField>