objects/SBQQ__Quote__c/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <description>Account Type set on the Account Record.  Used in Price Rule and Approval Process.</description>
    <formula>IF(
Business_Motion_Oppty__c = &apos;MSP&apos;,
TEXT( End_User_Account__r.Type ),
TEXT( SBQQ__Account__r.Type )
)</formula>
    <label>Account Type</label>
    <type>Text</type>
</CustomField>