objects/SBQQ__Quote__c/fields/Active_Modules__c.field-meta.xml
<CustomField>
    <fullName>Active_Modules__c</fullName>
    <description>The number of active packages this End User have.  This information is set on the End User Account record.</description>
    <formula>End_User_Account__r.Active_Packages__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Modules</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>