objects/SBQQ__Quote__c/fields/Active_Operators_Screen_Share__c.field-meta.xml
<CustomField>
    <fullName>Active_Operators_Screen_Share__c</fullName>
    <formula>IF(Operators_Approval_Screen_Share__c &gt; 0 &amp;&amp; ISPICKVAL(ApprovalStatus__c,&apos;Approved&apos;), Operators_Approval_Screen_Share__c, SBQQ__Account__r.Active_Operators_Screen_Share__c + Operators_in_Quote_ScreenShare__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The total number of operators of Screen Share for this quote. This number is the sum of the Active Operators on the account related to this quote as well as the number of operators in the quote itself. This number is used to assign the Screen Share discount percentage.</inlineHelpText>
    <label>Total Operators (ScreenShare)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>