objects/SBQQ__Quote__c/fields/Actual_Renewal_Uplift__c.field-meta.xml
<CustomField>
    <fullName>Actual_Renewal_Uplift__c</fullName>
    <formula>IF( Type_Renewal_ARR_Total__c &gt; 0, ((Type_Renewal_ARR_Total__c - Incoming_ARR_formula__c) /Incoming_ARR_formula__c), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Renewal Uplift</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>