objects/SBQQ__Quote__c/fields/Actual_Uplift__c.field-meta.xml
<CustomField>
    <fullName>Actual_Uplift__c</fullName>
    <formula>/*IF( AND(  
 ISPICKVAL(SBQQ__Type__c, &quot;Renewal&quot;),NOT(ISBLANK(Customer_Price_ARR__c)),NOT(ISBLANK(Pre_Uplift_Amount__c))), 
(Customer_Price_ARR__c /  Pre_Uplift_Amount__c )-1,
Null
 )*/


IF( ISPICKVAL( SBQQ__Type__c ,&quot;Renewal&quot;), ((Exit_ARR__c - Incoming_ARR_formula__c)/Incoming_ARR_formula__c),null)</formula>
    <inlineHelpText>Based on Renewal Quote Line Net Unit Price and Pre-Uplift Amount.</inlineHelpText>
    <label>Actual Uplift</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>