objects/SBQQ__Quote__c/fields/Add_on_Rollup_Amount__c.field-meta.xml
<CustomField>
    <fullName>Add_on_Rollup_Amount__c</fullName>
    <label>Add-on Rollup Amount</label>
    <summarizedField>SBQQ__QuoteLine__c.SBQQ__NetTotal__c</summarizedField>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.Transaction_Type__c</field>
        <operation>equals</operation>
        <value>Add-On, Upsell</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>