objects/SBQQ__Quote__c/fields/Add_Type_On_the_Quote__c.field-meta.xml
<CustomField>
    <fullName>Add_Type_On_the_Quote__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When Checked it adds Type Column on the Quote Table. 
This field is unchecked for New, Add-on, Renewal and Upsell opportunities.</inlineHelpText>
    <label>Add Type On the Quote</label>
    <type>Checkbox</type>
</CustomField>