objects/SBQQ__Quote__c/fields/Additional_Terms_2__c.field-meta.xml
<CustomField>
    <fullName>Additional_Terms_2__c</fullName>
    <inlineHelpText>Please Enter any additional non standard terms in this box.PLEASE DO NOT ADD BLANK SPACES BETWEEN PARAGRAPHS, USE OTHER ADDITIONAL TERMS FIELDS IF YOU WANT SPACES BETWEEN PARAGRAPHS.</inlineHelpText>
    <label>Additional Terms # 2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>