objects/SBQQ__Quote__c/fields/Additional_Terms_3__c.field-meta.xml
<CustomField>
    <fullName>Additional_Terms_3__c</fullName>
    <inlineHelpText>Please use this field to add any special quote terms. PLEASE DO NOT ADD BLANK SPACES BETWEEN PARAGRAPHS, USE OTHER ADDITIONAL TERMS FIELDS IF YOU WANT SPACES BETWEEN PARAGRAPHS.</inlineHelpText>
    <label>Additional Terms # 3</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>