objects/SBQQ__Quote__c/fields/Additional_Terms__c.field-meta.xml
<CustomField>
    <fullName>Additional_Terms__c</fullName>
    <inlineHelpText>Use this field to add any custom terms, PLEASE DO NOT ADD BLANK SPACES BETWEEN PARAGRAPHS, USE OTHER ADDITIONAL TERMS FIELDS IF YOU WANT SPACES BETWEEN PARAGRAPHS.</inlineHelpText>
    <label>Additional Terms #1</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>