objects/SBQQ__Quote__c/fields/AddOn_Modules__c.field-meta.xml
<CustomField>
    <fullName>AddOn_Modules__c</fullName>
    <description>Used in a price rule and summary variable to count how many bundles are on the quote.</description>
    <label>AddOn Modules</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>