objects/SBQQ__Quote__c/fields/ADI_SKU_Count__c.field-meta.xml
<CustomField>
    <fullName>ADI_SKU_Count__c</fullName>
    <description>To be deleted.</description>
    <label>DEPRECATED - ADI SKU Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>