objects/SBQQ__Quote__c/fields/Adjustment_to_Annualized_Spend__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_to_Annualized_Spend__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Adjustment to Annualized Spend</label>
    <type>Checkbox</type>
</CustomField>