objects/SBQQ__Quote__c/fields/AEM_Migration_Quote_needs_Recalculation__c.field-meta.xml
<CustomField>
    <fullName>AEM_Migration_Quote_needs_Recalculation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to indicate that new AEM Migration quotes need to be recalculated to ensure that all discounts have been applied correctly. Jira ticket SS-12035</description>
    <inlineHelpText>This field is used to indicate that new AEM Migration quotes need to be recalculated to ensure that all discounts have been applied correctly.</inlineHelpText>
    <label>AEM Migration Quote needs Recalculation</label>
    <type>Checkbox</type>
</CustomField>