objects/SBQQ__Quote__c/fields/Agreement_Date__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Date__c</fullName>
    <inlineHelpText>This is the date the Master Agreement was executed.</inlineHelpText>
    <label>Agreement Date</label>
    <type>Date</type>
</CustomField>