objects/SBQQ__Quote__c/fields/Agreement_Date_on_Template__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Date_on_Template__c</fullName>
    <formula>CASE(MONTH( Agreement_Date__c ), 
1, &quot;January&quot;, 
2, &quot;February&quot;, 
3, &quot;March&quot;, 
4, &quot;April&quot;, 
5, &quot;May&quot;, 
6, &quot;June&quot;, 
7, &quot;July&quot;, 
8, &quot;August&quot;, 
9, &quot;September&quot;, 
10, &quot;October&quot;, 
11, &quot;November&quot;, 
12, &quot;December&quot;, 
&quot;None&quot;) + &quot; &quot; + CASE(DAY(Agreement_Date__c),1,&quot;1st&quot;,2,&quot;2nd&quot;,3,&quot;3rd&quot;,4,&quot;4th&quot;,5,&quot;5th&quot;,6,&quot;6th&quot;,7,&quot;7th&quot;,8,&quot;8th&quot;,9,&quot;9th&quot;,10,&quot;10th&quot;,11,&quot;11th&quot;,12,&quot;12th&quot;,13,&quot;13th&quot;,14,&quot;14th&quot;,15,&quot;15th&quot;,16,&quot;16th&quot;,17,&quot;17th&quot;,18,&quot;18th&quot;,19,&quot;19th&quot;,20,&quot;20th&quot;,21,&quot;21st&quot;,22,&quot;22nd&quot;,23,&quot;23rd&quot;,24,&quot;24th&quot;,25,&quot;25th&quot;,26,&quot;26th&quot;,27,&quot;27th&quot;,28,&quot;28th&quot;,29,&quot;29th&quot;,30,&quot;30th&quot;,31,&quot;31st&quot;,&quot;None&quot;) + &quot;,&quot; + &quot; &quot;+ TEXT(YEAR(Agreement_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agreement Date on Template</label>
    <type>Text</type>
</CustomField>