objects/SBQQ__Quote__c/fields/Agreement_Type__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Type__c</fullName>
    <inlineHelpText>Legal name of Master Agreement (the word &quot;Agreement&quot; not required).</inlineHelpText>
    <label>Agreement Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>