objects/SBQQ__Quote__c/fields/Annual_Price_per_EP__c.field-meta.xml
<CustomField>
    <fullName>Annual_Price_per_EP__c</fullName>
    <formula>IF(
  NOT(ISBLANK(Core_Quantity__c)) &amp;&amp; Core_Quantity__c &lt;&gt; 0,
  Tanium_Software_ARR__c / Core_Quantity__c,
  0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Price per EP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>