objects/SBQQ__Quote__c/fields/Annualized_Total_Software_Spend__c.field-meta.xml
<CustomField>
    <fullName>Annualized_Total_Software_Spend__c</fullName>
    <label>Annualized Total Software Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>