objects/SBQQ__Quote__c/fields/Appliance_SKUs__c.field-meta.xml
<CustomField>
    <fullName>Appliance_SKUs__c</fullName>
    <label>Appliance SKUs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>