objects/SBQQ__Quote__c/fields/ApplianceSKUs__c.field-meta.xml
<CustomField>
    <fullName>ApplianceSKUs__c</fullName>
    <inlineHelpText>If any of the products on the Quote have Product Line = Appliances</inlineHelpText>
    <label>Appliance SKUs</label>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.Product_Line__c</field>
        <operation>equals</operation>
        <value>Appliance</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>