objects/SBQQ__Quote__c/fields/Apply_Term_Discount__c.field-meta.xml
<CustomField>
    <fullName>Apply_Term_Discount__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set by users and managed by Price Rule.</description>
    <inlineHelpText>Add extra discount for software lines over 12 months</inlineHelpText>
    <label>Apply Term Discount</label>
    <type>Checkbox</type>
</CustomField>