objects/SBQQ__Quote__c/fields/Apply_Uplift__c.field-meta.xml
<CustomField>
    <fullName>Apply_Uplift__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in CPQ Price Rules.</description>
    <label>Apply Uplift %</label>
    <type>Checkbox</type>
</CustomField>