objects/SBQQ__Quote__c/fields/Apply_Volume_Discount__c.field-meta.xml
<CustomField>
    <fullName>Apply_Volume_Discount__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Add extra discount by applying Volume Base Discount.</inlineHelpText>
    <label>Apply Volume Discount</label>
    <type>Checkbox</type>
</CustomField>