objects/SBQQ__Quote__c/fields/ApprovalDiscountRegion__c.field-meta.xml
<CustomField>
    <fullName>ApprovalDiscountRegion__c</fullName>
    <formula>IF(CONTAINS(SBQQ__PriceBook__r.Name , &quot;EMEA&quot;) , &quot;EMEA &amp; APAC&quot; , 
IF(AND(CONTAINS( SBQQ__PriceBook__r.Name , &quot;Canada&quot;), CONTAINS(SBQQ__Opportunity2__r.Owner.Level_4__c , &quot;GHE&quot;)) , &quot;GHE&quot;,
IF(CONTAINS(SBQQ__PriceBook__r.Name , &quot;Canada&quot;) , &quot;US&amp;Canada&quot; , 
IF(OR(CONTAINS( SBQQ__PriceBook__r.Name , &quot;Asia&quot;), CONTAINS( SBQQ__PriceBook__r.Name , &quot;Japan&quot;)) , &quot;Japan&quot; ,

&quot;None&quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>EMEA &amp; APAC = If Pricebook is EMEA &amp; APAC 
US &amp; Canada = If Pricebook is US &amp; Canada
Japan = If Pricebook is Asia 
GHE = if Pricbook is US &amp; Canada AND Opp Owner Level 4 region is GHE</inlineHelpText>
    <label>Approval Discount Region</label>
    <type>Text</type>
</CustomField>