objects/SBQQ__Quote__c/fields/AreaVP__c.field-meta.xml
<CustomField>
    <fullName>AreaVP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used for approval process and populated by trigger</description>
    <label>Area VP</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotes3</relationshipName>
    <type>Lookup</type>
</CustomField>