objects/SBQQ__Quote__c/fields/ARR_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>ARR_Adjustment__c</fullName>
    <defaultValue>(0.00)</defaultValue>
    <description>01/08/2025 - Label updated to align with Corporate ARR nomenclature. Jira ticket SS-9438</description>
    <inlineHelpText>An entry in this field will adjust the Day 1 ARR amount negatively or positively, depending on the value entered.</inlineHelpText>
    <label>Sales ARR Adjustment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>