objects/SBQQ__Quote__c/fields/ARR_Adjustment_Reason__c.field-meta.xml
<CustomField>
    <fullName>ARR_Adjustment_Reason__c</fullName>
    <description>01/08/2025 - Label updated to align with Corporate ARR nomenclature. Jira ticket SS-9438
01/08/2026 - Label updated to align with it&apos;s API name. SS-11516</description>
    <inlineHelpText>Please provide an explanation as to why an adjustment was made</inlineHelpText>
    <label>ARR Adjustment Reason</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>