objects/SBQQ__Quote__c/fields/ARR_Margin__c.field-meta.xml
<CustomField>
    <fullName>ARR_Margin__c</fullName>
    <description>Implemented as a part of the MSP Simplification project to display the ARR Margin % based on the FY25 MSP Margin Calculator</description>
    <formula>IF(Business_Motion_Oppty__c = &apos;MSP&apos;, (Day_1_ARR__c - Total_COGS__c)/Day_1_ARR__c, null)</formula>
    <label>Sales ARR Margin %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>