objects/SBQQ__Quote__c/fields/ARR_Rollup_Locked__c.field-meta.xml
<CustomField>
    <fullName>ARR_Rollup_Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>01/08/2025 - Label updated to align with Corporate ARR nomenclature. Jira ticket SS-9438</description>
    <label>Sales ARR Rollup Locked</label>
    <type>Checkbox</type>
</CustomField>