objects/SBQQ__Quote__c/fields/Auto_Generated_AEM_Migration_Quote__c.field-meta.xml
<CustomField>
    <fullName>Auto_Generated_AEM_Migration_Quote__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto-Generated AEM Migration Quote</label>
    <type>Checkbox</type>
</CustomField>