objects/SBQQ__Quote__c/fields/AWS_Marketplace__c.field-meta.xml
<CustomField>
    <fullName>AWS_Marketplace__c</fullName>
    <description>This box will be checked when Amazon is the partner</description>
    <formula>IF(SBQQ__Partner__r.Name = $Label.AWS_Marketplace_Partner_Name, TRUE, FALSE)</formula>
    <inlineHelpText>This box will be checked when Amazon is the partner</inlineHelpText>
    <label>AWS Marketplace</label>
    <type>Checkbox</type>
</CustomField>