objects/SBQQ__Quote__c/fields/Azure_Marketplace__c.field-meta.xml
<CustomField>
    <fullName>Azure_Marketplace__c</fullName>
    <description>This box will be checked when Microsoft is the partner</description>
    <formula>IF(SBQQ__Partner__r.Name = $Label.Azure_Marketplace_Partner_Name, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This box will be checked when Microsoft is the partner</inlineHelpText>
    <label>Azure Marketplace</label>
    <type>Checkbox</type>
</CustomField>