objects/SBQQ__Quote__c/fields/Azure_Marketplace_EDW__c.field-meta.xml
<CustomField>
    <fullName>Azure_Marketplace_EDW__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Mirrors the value of the field of the same name without the (EDW). It has been created to minimize the requirement for Fivetran to recreate the formula logic in order to pass the field value to Snowflake.

The field is updated by flow after record save. This field should only be made available to Admin profiles along with the EDW profile. It should not be added to page layouts or report types</description>
    <label>Azure Marketplace (EDW)</label>
    <type>Checkbox</type>
</CustomField>