objects/SBQQ__Quote__c/fields/Bill_To_Address_2__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Address_2__c</fullName>
    <label>Bill To Street 2</label>
    <length>250</length>
    <type>Text</type>
</CustomField>