objects/SBQQ__Quote__c/fields/Bill_To_Attn__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Attn__c</fullName>
    <label>Bill To Attn</label>
    <length>250</length>
    <type>Text</type>
</CustomField>