objects/SBQQ__Quote__c/fields/Billing_Detail_Report__c.field-meta.xml
<CustomField>
    <fullName>Billing_Detail_Report__c</fullName>
    <description>Field to link to Billing Detail Report with Id pass through. SS-7861</description>
    <formula>HYPERLINK(&quot;/lightning/r/Report/00O7V000006V0M7UAK/view?fv0=&quot;&amp;Name, &quot;Billing Detail Report&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Detail Report</label>
    <type>Text</type>
</CustomField>