objects/SBQQ__Quote__c/fields/Billing_Schedule_Exist__c.field-meta.xml
<CustomField>
    <fullName>Billing_Schedule_Exist__c</fullName>
    <formula>SBQQ__Opportunity2__r.BillingScheduleTotalCount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Schedule Exist</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>