objects/SBQQ__Quote__c/fields/Billing_Schedule_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Billing_Schedule_Total_Amount__c</fullName>
    <description>This will contain the Total Billing Amount (Gross) of the attached billing schedules.</description>
    <label>Billing Schedule Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>