objects/SBQQ__Quote__c/fields/BillingInfoOnQuoteDocument__c.field-meta.xml
<CustomField>
    <fullName>BillingInfoOnQuoteDocument__c</fullName>
    <description>Used to show Billing Info in Quote PDF when Generate Document button is clicked on Quote. This field is updated via code.</description>
    <inlineHelpText>Used to show in Quote PDF when Generate Document button is clicked on Quote</inlineHelpText>
    <label>Billing Info On Quote Document</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>