objects/SBQQ__Quote__c/fields/BillingQuoteTerms__c.field-meta.xml
<CustomField>
    <fullName>BillingQuoteTerms__c</fullName>
    <description>Populated from the billing schedule configurator</description>
    <inlineHelpText>Billing information used in quote templates</inlineHelpText>
    <label>Billing Quote Terms</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>