objects/SBQQ__Quote__c/fields/BillingScheduleSyncStatus__c.field-meta.xml
<CustomField>
    <fullName>BillingScheduleSyncStatus__c</fullName>
    <formula>IF ( SBQQ__Primary__c =True,  SBQQ__Opportunity2__r.BillingScheduleSyncStatus__c ,&quot;Not Applicable&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Schedule Sync Status</label>
    <type>Text</type>
</CustomField>