objects/SBQQ__Quote__c/fields/Booking_Policy_Start_Date_Violated__c.field-meta.xml
<CustomField>
    <fullName>Booking_Policy_Start_Date_Violated__c</fullName>
    <formula>SBQQ__Opportunity2__r.Booking_Policy_Start_Date_Violated__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Policy Start Date Violated</label>
    <type>Checkbox</type>
</CustomField>