objects/SBQQ__Quote__c/fields/Burst_DD_Approval_Needed__c.field-meta.xml
<CustomField>
    <fullName>Burst_DD_Approval_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Burst DD Approval Needed</label>
    <type>Checkbox</type>
</CustomField>