objects/SBQQ__Quote__c/fields/Burst_Max_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Burst_Max_Quantity__c</fullName>
    <description>Quantity of Products on Quote that have Promo Code &quot;Burst&quot;</description>
    <inlineHelpText>Quantity of Products on Quote that have Promo Code &quot;Burst&quot;</inlineHelpText>
    <label>Burst Max Quantity</label>
    <summarizedField>SBQQ__QuoteLine__c.Quantity_Template__c</summarizedField>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.Product_Promotion__c</field>
        <operation>equals</operation>
        <value>a0V7V00000J6Fnt</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>