objects/SBQQ__Quote__c/fields/Burst_Products_List__c.field-meta.xml
<CustomField>
    <fullName>Burst_Products_List__c</fullName>
    <description>List of products on the quote that have a Promo of &quot;Burst&quot;</description>
    <label>Burst Products List</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>