objects/SBQQ__Quote__c/fields/Burst_Term_Less_Than_Committed__c.field-meta.xml
<CustomField>
    <fullName>Burst_Term_Less_Than_Committed__c</fullName>
    <formula>IF(Max_Burst_Term_Rollup__c  &lt;= Committed_Term__c , TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Burst Term Less Than Committed</label>
    <type>Checkbox</type>
</CustomField>