objects/SBQQ__Quote__c/fields/Bursting_Amount_1__c.field-meta.xml
<CustomField>
    <fullName>Bursting_Amount_1__c</fullName>
    <inlineHelpText>&quot;Bursting Amount #1&quot; is the amount of free licenses the Customer can deploy in the &quot;Bursting Period #1&quot;.</inlineHelpText>
    <label>Bursting Amount #1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>