objects/SBQQ__Quote__c/fields/Bursting_Amount_3__c.field-meta.xml
<CustomField>
    <fullName>Bursting_Amount_3__c</fullName>
    <inlineHelpText>&quot;Bursting Amount #3&quot; is the amount of free licenses the Customer can deploy in the &quot;Bursting Period #3&quot;.Include Percent or Dollar</inlineHelpText>
    <label>Bursting Amount #3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>