objects/SBQQ__Quote__c/fields/Bursting_Count__c.field-meta.xml
<CustomField>
    <fullName>Bursting_Count__c</fullName>
    <description>To be deleted.</description>
    <label>DEPRECATED - Bursting Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>