objects/SBQQ__Quote__c/fields/Bursting_Period_3_Months__c.field-meta.xml
<CustomField>
    <fullName>Bursting_Period_3_Months__c</fullName>
    <inlineHelpText>&quot;Bursting Period #3&quot; is the term the &quot;Bursting Amount #3&quot; is offered and is stated as the number of months from the second anniversary of the order effective date.</inlineHelpText>
    <label>Bursting Period #3 (Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>