objects/SBQQ__Quote__c/fields/Bursting_Period__c.field-meta.xml
<CustomField>
    <fullName>Bursting_Period__c</fullName>
    <label>Bursting Period</label>
    <length>18</length>
    <type>Text</type>
</CustomField>