objects/SBQQ__Quote__c/fields/Bursting_Period_End__c.field-meta.xml
<CustomField>
    <fullName>Bursting_Period_End__c</fullName>
    <label>Bursting Period End</label>
    <type>Date</type>
</CustomField>