objects/SBQQ__Quote__c/fields/Bursting_Period_Start__c.field-meta.xml
<CustomField>
    <fullName>Bursting_Period_Start__c</fullName>
    <label>Bursting Period Start</label>
    <type>Date</type>
</CustomField>